[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -15,7 +15,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="dark">Gelap</string>
     <string name="delete">Hapus</string>
     <string name="appearance">Tampilan</string>
-    <string name="rename">Ubah Nama</string>
+    <string name="rename">Ganti nama</string>
     <string name="confirm_delete">Konfirmasi Hapus</string>
     <string name="do_you_really_want_to_delete_this_witharg">Apakah Anda yakin ingin menghapus %s?</string>
     <string name="confirm_overwrite">Konfirmasi Timpa</string>
@@ -275,6 +275,41 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="my_note">nama_catatan</string>
     <string name="close">Tutup</string>
     <string name="cancel">Batal</string>
+    <string name="do_you_like_this_project_want_donate_to_keep_alive">Apakah Anda menikmati proyek ini? Apakah Anda ingin mendukung perbaikan lebih lanjut dan perbaikan bug? \n\nMendeveloping aplikasi dan menulis posting blog terkait membutuhkan banyak waktu! Jika Anda ingin membantu proyek untuk melanjutkan, silakan pertimbangkan sumbangan kecil! \n\n Proyek ini dikembangkan di waktu luang, sepenuhnya gratis dan tanpa iklan!</string>
+    <string name="app_start_tab">Tab memulai aplikasi</string>
+    <string name="tab_to_select_at_start">Tab untuk dipilih saat memulai aplikasi</string>
+    <string name="swipe_to_change_mode">Gesek untuk mengubah mode</string>
+    <string name="swipe_to_change_to_edit_or_view_mode">Gesek untuk mengubah ke mode edit atau tampilan (berlawanan dengan mode saat ini)</string>
+    <string name="folder_first">Folder pertama</string>
+    <string name="go_to">Pergi ke</string>
+    <string name="appdata_public">AppData (publik)</string>
+    <string name="appdata_private">AppData (privat)</string>
+    <string name="appdata_sdcard">AppData (SD Card)</string>
+    <string name="internal_storage">Penyimpanan internal</string>
+    <string name="open_the_document_from_main_view">Anda dapat membuka dokumen dari tampilan utama di bagian bawah, browser file atau peluncur. Ada juga opsi untuk menambahkan teks yang dibagikan ke Markor.</string>
+    <string name="notebook_is_the_home_of_your_files">Notebook adalah folder yang dimuat Markor di browser file saat aplikasi dimulai. Ini adalah folder beranda dari file Anda.</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote adalah opsi tercepat untuk menuliskan catatan. Ini adalah file dalam format Markdown dengan lokasi default &gt;Notebook/QuickNote.md&lt;, Anda bisa mengatur jalur file kustom di pengaturan.</string>
+    <string name="todo_is_the_easiest_way_">Kelola tugas Anda dengan ToDo. Ini adalah file dalam format todo.txt dengan lokasi default &gt;Notebook/todo.txt&lt;, Anda dapat mengatur jalur file kustom di pengaturan.</string>
+    <string name="navigationbar_color">Warna bilah navigasi</string>
+    <string name="black">Hitam</string>
+    <string name="white">Putih</string>
+    <string name="view">Lihat</string>
+    <string name="view_mode">Mode tampilan</string>
+    <string name="edit_mode">Mode edit</string>
+    <string name="mount_storage">Penyimpanan mount</string>
+    <string name="application_needs_access_to_storage_mount_it">Izin diperlukan untuk mengakses penyimpanan ini. Mount penyimpanan untuk memberikan akses. Konfirmasikan dialog ini untuk mendapatkan popup. Pilih penyimpanan di sana dan tekan pilih.</string>
+    <string name="share_into">Berbagi ke</string>
+    <string name="favourite">Favorit</string>
+    <string name="favourites">Jumlah Favorit</string>
+    <string name="please_wait">Mohon tunggu</string>
+    <string name="app_start_folder">Folder mulai aplikasi</string>
+    <string name="tab_width">Panjang tab</string>
+    <string name="amount_of_space_for_tab">Jumlah karakter spasi untuk menampilkan tabulator</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">File yang dipilih mungkin adalah file plaintext. Apakah Anda ingin membukanya di editor, atau di aplikasi lain? \n\nApakah Anda tidak mencoba membuka file binary. Jika Anda tidak yakin, buka dengan aplikasi lain.</string>
+    <string name="list_in_recent_files">Daftar dalam file terbaru</string>
+    <string name="reload">Muat ulang</string>
+    <string name="wrap_words">Pembungkus kata</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Break ringan jika teks tidak sesuai dengan lebar layar. Lainnya, mengaktifkan pengguliran horizontal.</string>
     <string name="recursive_search_in_current_directory">Pencarian rekursif di direktori saat ini.</string>
     <string name="always_open_with_this_app">Selalu buka dengan aplikasi ini</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Selalu buka file dengan aplikasi ini saat daftar berisi ekstensi file. Gunakan \'None, .html, .css, .js\' misalnya jika Anda ingin mengedit file web dan yang tanpa ekstensi file.</string>
