[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -16,11 +16,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="delete">Hapus</string>
     <string name="appearance">Tampilan</string>
     <string name="rename">Ganti nama</string>
-    <string name="confirm_delete">Konfirmasi Hapus</string>
+    <string name="confirm_delete">Konfirmasikan Penghapusan</string>
     <string name="do_you_really_want_to_delete_this_witharg">Apakah Anda yakin ingin menghapus %s?</string>
     <string name="confirm_overwrite">Konfirmasi Timpa</string>
     <string name="file_already_exists_overwerite">Berkas sudah ada, timpa?</string>
-    <string name="browse_filesystem">Rambah filesystem</string>
+    <string name="browse_filesystem">Rambah file sistem</string>
     <string name="title">Judul</string>
     <string name="empty_directory">Direktori kosong</string>
     <string name="enter_name_of_folder">Masukkan nama folder anda</string>
@@ -360,7 +360,29 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="sort_alphabetically">Urutkan sesuai abjad</string>
     <string name="create_new_file_or_folder">Buat berkas baru atau folder</string>
     <string name="choose_format">Pilih format</string>
+    <string name="selected">Dipilih</string>
+    <string name="back">Kembali</string>
+    <string name="expand_collapse">Perluas / Runtuhkan</string>
+    <string name="essential">Penting</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Menambahkan UUID yang dapat dibaca manusia untuk tugas-tugas baru</string>
+    <string name="action_order">Perintah tindakan</string>
+    <string name="toggle_action_visibility">Mengalihkan visibilitas tindakan</string>
+    <string name="load_default_settings">Memuat setelan bawaan</string>
+    <string name="drag">Ambil</string>
+    <string name="created">Dibuat pada</string>
+    <string name="file_encryption_password">Sandi enkripsi berkas</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Tidak ada kumpulan kata sandi, tidak dapat mengenkripsi atau mendekripsi.\nPergi ke Setelan -&gt; Umum &gt; Kata Sandi untuk mengatur kata sandi.</string>
+    <string name="encrypt_file_content">Enkripsi konten file</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Tak bisa mengenkripsi konten file. Berkas tidak disimpan.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Tak bisa mendekripsi konten file. Apakah Anda menggunakan password yang salah? Apakah file benar-benar dienkripsi dengan enkripsi Markors AES?</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">Kata sandi sudah diatur. Mengatur kata sandi baru akan menimpa kata sandi yang ada dan Anda mungkin tidak dapat mengakses file lagi jika Anda lupa kata sandi.</string>
     <string name="code_block">Blok kode</string>
+    <string name="add_completion_date">Menambahkan tanggal penyelesaian</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Menambahkan tanggal penyelesaian untuk todos saat menandainya seperti yang dilakukan</string>
+    <string name="file_description_format">Deskripsi format file</string>
+    <string name="file_description_format_dialog">Format untuk deskripsi di bawah setiap file di browser file. Mengikuti aturan SimpleDateFormat Android, dengan penambahan FS untuk menampilkan ukuran file. Biarkan kosong untuk menggunakan format default untuk lokal Anda.\n\nContoh input:\nFS yyyy MMM dd hh:mm:ss aa\nOutput format:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">Memuat nilai default</string>
+    <string name="file_settings">Setelan file</string>
     <string name="copy_move_conflict_message">\'%s\' sudah ada di %s</string>
     <string name="additional_contexts_and_projects">Konteks dan proyek tambahan</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Masukkan @contexts dan +proyek yang terpisah dari ruang. Ini akan selalu terlihat di todo.txt untuk menyisipkan dialog.</string>
