--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -383,6 +383,33 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_description_format_dialog">Format untuk deskripsi di bawah setiap file di browser file. Mengikuti aturan SimpleDateFormat Android, dengan penambahan FS untuk menampilkan ukuran file. Biarkan kosong untuk menggunakan format default untuk lokal Anda.\n\nContoh input:\nFS yyyy MMM dd hh:mm:ss aa\nOutput format:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Memuat nilai default</string>
     <string name="file_settings">Setelan file</string>
+    <string name="search_and_replace">Cari / Ganti</string>
+    <string name="search_for">Cari untuk</string>
+    <string name="replace_with">Ganti dengan</string>
+    <string name="replace_once">Ganti (1)</string>
+    <string name="replace_all">Ganti semua</string>
+    <string name="matches">Cocok</string>
+    <string name="search_replace_pattern_error_message">Cari atau ganti kesalahan pola.</string>
+    <string name="backup_settings">Pengaturan cadangan</string>
+    <string name="restore_settings">Kembalikan pengaturan</string>
+    <string name="failed_to_create_backup">Gagal membuat cadangan</string>
+    <string name="export_settings_to_json_file">Ekspor setelan ke file .json</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Mengimpor setelan dari file .json cadangan. Jika berhasil, aplikasi dimuat kembali.</string>
+    <string name="failed_to_restore_settings_from_backup">Gagal memulihkan setelan dari cadangan</string>
+    <string name="newline_is_new_paragraph">Baris baru = Paragraf baru</string>
+    <string name="search_in_content">Cari berdasarkan konten</string>
+    <string name="max_search_depth">Pencarian mendalam</string>
+    <string name="ignore_list">Abaikan daftar</string>
+    <string name="do_not_search_specified_files_and_folders">Jangan mencari file dan folder yang ditentukan.\nMenggunakan baris baru sebagai pemisah.\nGunakan kutipan untuk nama dir yang tepat: \"Test\".\nAtau gunakan Regex \'^[.]. *\'nContoh: ^.. *\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Cari Regex</string>
+    <string name="case_sensitive">Memperhatikan besar/kecil huruf</string>
+    <string name="stop_search_after_first_match">Hentikan pencarian setelah pertama cocok</string>
+    <string name="regex_can_not_be_compiled">Regex tidak dapat dikompilasi</string>
+    <string name="keep_both">Simpan keduanya</string>
+    <string name="skip">Lewati</string>
+    <string name="overwrite">Timpa</string>
+    <string name="keep_both_all">Simpan keduanya (semua)</string>
+    <string name="skip_all">Lewati (semua)</string>
     <string name="copy_move_conflict_message">\'%s\' sudah ada di %s</string>
     <string name="additional_contexts_and_projects">Konteks dan proyek tambahan</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Masukkan @contexts dan +proyek yang terpisah dari ruang. Ini akan selalu terlihat di todo.txt untuk menyisipkan dialog.</string>
