--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -340,12 +340,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="jump_to_bottom">跳转到底部</string>
     <string name="quote">引用</string>
     <string name="heading">标题</string>
-    <string name="heading_1">标题 1</string>
-    <string name="heading_2">标题 2</string>
-    <string name="heading_3">标题 3</string>
+    <string name="heading_1">1 级标题</string>
+    <string name="heading_2">2 级标题</string>
+    <string name="heading_3">3 级标题</string>
     <string name="heading_4">4 级标题</string>
     <string name="heading_5">5 级标题</string>
-    <string name="heading_6">六级标题</string>
+    <string name="heading_6">6 级标题</string>
     <string name="bold">粗体</string>
     <string name="italic">斜体</string>
     <string name="highlighted">高亮</string>
