--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -283,7 +283,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="folder_first">Folder pertama</string>
     <string name="go_to">Pergi ke</string>
     <string name="appdata_public">AppData (publik)</string>
-    <string name="appdata_private">AppData (privat)</string>
+    <string name="appdata_private">AppData (pribadi)</string>
     <string name="appdata_sdcard">AppData (SD Card)</string>
     <string name="internal_storage">Penyimpanan internal</string>
     <string name="open_the_document_from_main_view">Anda dapat membuka dokumen dari tampilan utama di bagian bawah, browser file atau peluncur. Ada juga opsi untuk menambahkan teks yang dibagikan ke Markor.</string>
@@ -421,10 +421,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_context">Menyisipkan konteks</string>
     <string name="browse_todo">Telusuri todo</string>
     <string name="browse_by_priority">Menelusuri menurut prioritas</string>
-    <string name="browse_by_due_date">Menelusuri berdasarkan tanggal jatuh tempo</string>
-    <string name="due_overdue">Lewat jatuh tempo</string>
-    <string name="due_today">Jatuh tempo hari ini</string>
-    <string name="due_future">Jatuh tempo mendatang</string>
+    <string name="browse_by_due_date">Menelusuri berdasarkan tenggat</string>
+    <string name="due_overdue">Lewat tenggat</string>
+    <string name="due_today">Tenggat hari ini</string>
+    <string name="due_future">Tenggat mendatang</string>
     <string name="completed">Diselesaikan</string>
     <string name="match_any">Cocokkan apa saja</string>
     <string name="match_all">Cocokkan semua</string>
