[ci skip] Update translations (Odia)

--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -15,7 +15,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="dark">ଗାଢ଼</string>
     <string name="delete">ବିଲୋପ କରନ୍ତୁ</string>
     <string name="appearance">ରୂପ</string>
-    <string name="rename">ପୁନଃନାମ</string>
+    <string name="rename">ନାମ ବଦଳାନ୍ତୁ</string>
     <string name="confirm_delete">ବିଲୋପ ନିଶ୍ଚିତ କରନ୍ତୁ</string>
     <string name="browse_filesystem">ଫାଇଲ୍ ସିଷ୍ଟମ୍ ବ୍ରାଉଜ୍ କରନ୍ତୁ</string>
     <string name="title">ଆଖ୍ୟା</string>
