--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -354,7 +354,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="horizontal_line">水平线</string>
     <string name="toggle_done">切换完成</string>
     <string name="link_color">链接颜色</string>
-    <string name="add_context">添加内容</string>
+    <string name="add_context">添加情境</string>
     <string name="add_project">添加项目</string>
     <string name="archive_completed_tasks">存档已完成的任务</string>
     <string name="sort_alphabetically">按字母顺序排序</string>
@@ -416,7 +416,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="enter_space_seperated_contexts_and_projects_these_will">输入以空格分隔的 @情境 和 +项目 标签 。 您可以始终在 todo.txt 的插入对话框中看见这些选项。</string>
     <string name="infinite">不限</string>
     <string name="browse_by_project">按项目浏览</string>
-    <string name="browse_by_context">按上下文浏览</string>
+    <string name="browse_by_context">按情境浏览</string>
     <string name="insert_project">插入项目</string>
     <string name="insert_context">插入情境</string>
     <string name="browse_todo">浏览 todo</string>
