--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -15,7 +15,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="dark">ଗାଢ଼</string>
     <string name="delete">ବିଲୋପ କରନ୍ତୁ</string>
     <string name="appearance">ରୂପ</string>
-    <string name="rename">ପୁନଃନାମ</string>
+    <string name="rename">ନାମ ବଦଳାନ୍ତୁ</string>
     <string name="confirm_delete">ବିଲୋପ ନିଶ୍ଚିତ କରନ୍ତୁ</string>
     <string name="browse_filesystem">ଫାଇଲ୍ ସିଷ୍ଟମ୍ ବ୍ରାଉଜ୍ କରନ୍ତୁ</string>
     <string name="title">ଆଖ୍ୟା</string>
@@ -44,6 +44,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file">ଫାଇଲ୍</string>
     <string name="image">ପ୍ରତିଛବି</string>
     <string name="font_size">ଫଣ୍ଟ ଆକାର</string>
+    <string name="last_modified_witharg">ଶେଷ ସଂଶୋଧିତ: %s</string>
+    <string name="select_this_folder">ଏହି ଫୋଲ୍ଡର୍ ଚୟନ କରନ୍ତୁ</string>
     <string name="select">ଚୟନ କରନ୍ତୁ</string>
     <string name="create">ସୃଷ୍ଟି କରନ୍ତୁ</string>
     <string name="hide_statusbar">ସ୍ଥିତି ଦଣ୍ଡିକା ଲୁଚାଅ</string>
@@ -51,10 +53,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="url_or_path">URL / ପଥ</string>
     <string name="insert_link">ଲିଙ୍କ୍ ସନ୍ନିବେଶ କରନ୍ତୁ</string>
     <string name="insert_image">ପ୍ରତିଛବି ସନ୍ନିବେଶ କରନ୍ତୁ</string>
+    <string name="contributors">ଯୋଗଦାନକାରୀ</string>
     <string name="changelog">ପରିବର୍ତ୍ତନ ଲଗ୍</string>
     <string name="more_info">ଅଧିକ ସୂଚନା</string>
     <string name="language">ଭାଷା</string>
+    <string name="open_with">ଏହା ସହ ଖୋଲନ୍ତୁ</string>
+    <string name="sort">ଏହା ଅନୁଯାୟୀ ସଜାନ୍ତୁ</string>
+    <string name="date">ତାରିଖ</string>
+    <string name="deleteme____1">ନାମ</string>
     <string name="size">ଆକାର</string>
+    <string name="reverse_order">ଓଲଟା କ୍ରମ</string>
     <string name="contribute">ଯୋଗଦାନ କରନ୍ତୁ</string>
     <string name="donate">ଦାନ କରନ୍ତୁ</string>
     <string name="press_back_again_to_exit">ପ୍ରସ୍ଥାନ କରିବା ପାଇଁ ପୁଣି \'ବ୍ୟାକ୍\' ଦବାନ୍ତୁ</string>
@@ -108,28 +116,59 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="type">ପ୍ରକାର</string>
     <string name="folder">ଫୋଲ୍ଡର୍</string>
     <string name="font">ଫଣ୍ଟ</string>
+    <string name="pick_date">ତାରିଖ ବାଛନ୍ତୁ</string>
+    <string name="pick_time">ସମୟ ବାଛନ୍ତୁ</string>
+    <string name="just_time">କେବଳ ସମୟ</string>
+    <string name="just_date">କେବଳ ତାରିଖ</string>
+    <string name="last_used">ଶେଷ ବ୍ୟବହୃତ</string>
+    <string name="my_note">ମୋ_ନୋଟ୍</string>
     <string name="close">ବନ୍ଦ କରନ୍ତୁ</string>
     <string name="cancel">ବାତିଲ୍‌ କରନ୍ତୁ</string>
     <string name="swipe_to_change_to_edit_or_view_mode">ସମ୍ପାଦନ କିମ୍ୱା ଦର୍ଶନ ମୋଡ୍ କୁ (ସମ୍ପ୍ରତି ମୋଡର ବିପରୀତକୁ) ଯିବା ପାଇଁ ସ୍ଵାଇପ୍ କରନ୍ତୁ</string>
+    <string name="folder_first">ପ୍ରଥମେ ଫୋଲ୍ଡର୍</string>
+    <string name="internal_storage">ଅନ୍ତର୍ନିହିତ ଷ୍ଟୋରେଜ୍‌</string>
     <string name="black">କଳା</string>
     <string name="white">ଧଳା</string>
+    <string name="view">ଦର୍ଶନ</string>
+    <string name="view_mode">ଦର୍ଶନ ମୋଡ୍</string>
     <string name="edit_mode">ସମ୍ପାଦନ ମୋଡ୍‍</string>
     <string name="please_wait">ଦୟାକରି ଅପେକ୍ଷା କରନ୍ତୁ</string>
     <string name="reload">ପୁନଃଲୋଡ୍ କରନ୍ତୁ</string>
     <string name="template">ଟେମ୍ପଲେଟ୍</string>
     <string name="print_pdf">ମୁଦ୍ରଣ / PDF</string>
+    <string name="increase_text_size_of_headings_according_to_level">ସ୍ତର ଅନୁଯାୟୀ ଶୀର୍ଷଲେଖ ର ପାଠ୍ୟ ଆକାର ବୃଦ୍ଧି କରନ୍ତୁ (# h1, ## h2. ### h3…)</string>
+    <string name="current">ସମ୍ପ୍ରତି</string>
     <string name="record_audio">ଅଡ଼ିଓ ରେକର୍ଡ କରନ୍ତୁ</string>
     <string name="attach">ସଂଲଗ୍ନ କରନ୍ତୁ</string>
     <string name="copy_file">ଫାଇଲ୍ କପି କରନ୍ତୁ</string>
     <string name="page">ପୃଷ୍ଠା</string>
     <string name="experimental_features">ପରୀକ୍ଷାମୂଳକ ବୈଶିଷ୍ଟ୍ୟଗୁଡ଼ିକ</string>
+    <string name="tools">ଉପକରଣ</string>
+    <string name="reading">ପଢ଼ୁଛନ୍ତି</string>
+    <string name="read">ପଢ଼ନ୍ତୁ</string>
+    <string name="table">ସାରଣୀ</string>
+    <string name="example_of_a_markdown_table">ଏକ Markdown ଟେବଲ୍ ର ଉଦାହରଣ</string>
+    <string name="open_link">ଲିଙ୍କ୍ ଖୋଲନ୍ତୁ</string>
     <string name="date_and_time">ତାରିଖ ଏବଂ ସମୟ</string>
+    <string name="heading_1">ଶିରୋନାମା ୧</string>
+    <string name="heading_2">ଶିରୋନାମା ୨</string>
+    <string name="heading_3">ଶିରୋନାମା ୩</string>
+    <string name="heading_4">ଶିରୋନାମା ୪</string>
+    <string name="heading_5">ଶିରୋନାମା ୫</string>
+    <string name="heading_6">ଶିରୋନାମା ୬</string>
+    <string name="choose_format">ଫର୍ମାଟ୍ ବାଛନ୍ତୁ</string>
     <string name="load_default_settings">ଡିଫଲ୍ଟ ସେଟିଂସ୍ ଲୋଡ୍ କରନ୍ତୁ</string>
+    <string name="created">ତିଆରି କରାଗଲା</string>
     <string name="file_settings">ଫାଇଲ୍ ସେଟିଂସ୍</string>
     <string name="backup_settings">ସେଟିଂସ୍ ବ୍ୟାକ୍‌ଅପ୍‌ ନିଅନ୍ତୁ</string>
     <string name="restore_settings">ସେଟିଂସ୍ ପୁନରୁଦ୍ଧାର କରନ୍ତୁ</string>
     <string name="export_settings_to_json_file">json ଫାଇଲକୁ ସେଟିଂସ୍ ରପ୍ତାନି କରନ୍ତୁ</string>
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">ବ୍ୟାକଅପ୍ json ଫାଇଲରୁ ସେଟିଂସ୍ ଆମଦାନୀ କରନ୍ତୁ। ସଫଳ ହେଲେ, ଆପ୍ ପୁନଃଆରମ୍ଭ ହୁଏ।</string>
     <string name="failed_to_restore_settings_from_backup">ବ୍ୟାକଅପ୍ ରୁ ସେଟିଂସ୍ ପୁନରୁଦ୍ଧାର କରିବାରେ ବିଫଳ ହୋଇଛି</string>
+    <string name="newline_is_new_paragraph">Newline = ନୂଆ ଅନୁଚ୍ଛେଦ</string>
     <string name="regex_search">RegEx ସନ୍ଧାନ</string>
+    <string name="keep_both">ଉଭୟ ରଖନ୍ତୁ</string>
+    <string name="skip">ବାଦ୍ ଦିଅ</string>
+    <string name="keep_both_all">ଉଭୟ ରଖନ୍ତୁ (ସମସ୍ତ)</string>
+    <string name="skip_all">ବାଦ୍ ଦିଅ (ସମସ୍ତ)</string>
 </resources>
