[ci skip] Update translations (Kurmanji (Kurdish))

--- a/app/src/main/res/values-kmr/strings.xml
+++ b/app/src/main/res/values-kmr/strings.xml
@@ -29,6 +29,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="about">Debar</string>
     <string name="font_size">Mezinahiya nivîsê</string>
     <string name="select">Hilbijartin</string>
+    <string name="name">Nav</string>
     <string name="language">Ziman</string>
     <string name="sort">Rêz bike</string>
     <string name="date">Dem</string>
