--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -38,7 +38,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_documents">Sök dokument</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Dela till&#8230;</string>
     <string name="share">Dela</string>
-    <string name="search">Sök</string>
+    <string name="search">Söc</string>
     <string name="display_converted_markup">Visa konverterad markup</string>
     <string name="editor">Redaktör</string>
     <string name="folders">Mappar</string>
@@ -428,4 +428,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="completed">Slutförd</string>
     <string name="match_any">Matcha alla</string>
     <string name="match_all">Matcha alla</string>
+    <string name="dynamic_notebook_root_links">Dynamisk sökning efter anteckningsbok rot</string>
+    <string name="search_dynamically_for_notebook_root">För att följa wiki-länkar, dynamiskt söka efter filen notebook.zim för att identifiera rotkatalogen för den aktuella anteckningsboken. Kontrollera detta om du använder flera anteckningsböcker för zim eller den anteckningsbok som anges i appen inte motsvarar din anteckningsbok för zim.</string>
 </resources>
