[ci skip] Update translations (Danish)

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -428,4 +428,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="completed">Afsluttet</string>
     <string name="match_any">Match Enhver</string>
     <string name="match_all">Match Alle</string>
+    <string name="dynamic_notebook_root_links">Dynamisk søgning efter notesbog rod</string>
+    <string name="search_dynamically_for_notebook_root">For at følge wiki-links skal du dynamisk søge efter filen notebook.zim for at identificere rodmappen for den aktuelle notesbog. Markér dette hvis du bruger flere zim notesbøger eller den notesbog mappe der er sat i appen, svarer ikke til din zim notesbog.</string>
 </resources>
