[ci skip] Update translations (Italian)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -428,4 +428,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="completed">Completato</string>
     <string name="match_any">Corrisponde a qualsiasi</string>
     <string name="match_all">Corrisponde tutto</string>
+    <string name="dynamic_notebook_root_links">Ricerca dinamica per la radice del notebook</string>
+    <string name="search_dynamically_for_notebook_root">Per seguire i collegamenti wiki, cercare dinamicamente il file notebook.zim per identificare la directory radice per il notebook corrente. Spunta questa opzione se usi più taccuini zim o la directory del taccuino impostata nell\'app non corrisponde al tuo taccuino zim.</string>
 </resources>
