--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,8 +11,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="settings">设置</string>
-    <string name="light">亮色主题</string>
-    <string name="dark">暗色主题</string>
+    <string name="light">浅色</string>
+    <string name="dark">深色</string>
     <string name="delete">删除</string>
     <string name="appearance">外观样式</string>
     <string name="rename">重命名</string>
@@ -428,4 +428,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="completed">已完成</string>
     <string name="match_any">任何匹配</string>
     <string name="match_all">匹配全部</string>
+    <string name="dynamic_notebook_root_links">动态搜索笔记本根目录</string>
+    <string name="search_dynamically_for_notebook_root">为了跟随wiki链接，动态地搜索notbook.zim文件来识别当前笔记本的根目录。 如果您使用多个zim笔记本或者应用程序中的笔记本目录与您的zim笔记本不对应，请选中此项。</string>
 </resources>
