--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -181,6 +181,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="load_default_settings">ଡିଫଲ୍ଟ ସେଟିଂସ୍ ଲୋଡ୍ କରନ୍ତୁ</string>
     <string name="created">ତିଆରି କରାଗଲା</string>
     <string name="file_encryption_password">ଫାଇଲ୍ ଏନକ୍ରିପସନ୍ ପାସ୍‍ୱାର୍ଡ଼</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">ପାସ୍‍ୱାର୍ଡ଼ ପୂର୍ବରୁ ସେଟ୍ ହୋଇଛି। ଏକ ନୂତନ ପାସ୍‍ୱାର୍ଡ଼ ସେଟ୍ କରିବା ଦ୍ୱାରା ବିଦ୍ୟମାନ ପାସ୍‍ୱାର୍ଡ଼ ନବଲିଖନ ହେବ ଏବଂ ଯଦି ଆପଣ ପାସ୍‍ୱାର୍ଡ଼ ଭୁଲିଯାଆନ୍ତି ତେବେ ଆପଣ ଆଉ ଫାଇଲ୍ ଆକସେସ୍ କରିବାକୁ ସମର୍ଥ ହୋଇନପାରନ୍ତି।</string>
     <string name="file_settings">ଫାଇଲ୍ ସେଟିଂସ୍</string>
     <string name="backup_settings">ସେଟିଂସ୍ ବ୍ୟାକ୍‌ଅପ୍‌ ନିଅନ୍ତୁ</string>
     <string name="restore_settings">ସେଟିଂସ୍ ପୁନରୁଦ୍ଧାର କରନ୍ତୁ</string>
